--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Toggle Menu</title>
   <style>
-    .content {
+    .accordion-body {
       display: none;
       height: 0;
       opacity: 0;
@@ -14,7 +14,7 @@
       transition: all .3s ease-out;
     }
 
-    .open {
+    .accordion-body.open {
       display: block;
       height: auto;
       opacity: 1;
@@ -26,21 +26,21 @@
 <body>
   <div id="accordion">
     <div class="accordion-item">
-      <button class="button" data-target="content1" >Toggle Content 1</button>
-      <div id="content1" class="content">
+      <button class="accordion-header" data-target="accordion-body-1" >Toggle Content 1</button>
+      <div id="accordion-body-1" class="accordion-body">
         <p>This is a content.</p>
         <div id="sub-accordion"></div>
-        <div class="sub-accordion-item">
-          <button class="button" data-target="content1-1" >Toggle Content 1.1</button>
-          <div id="content1-1" class="content">
+        <div class="accordion-item">
+          <button class="accordion-header" data-target="accordion-body-1-1" >Toggle Content 1.1</button>
+          <div id="accordion-body-1-1" class="accordion-body">
             <p>This is a content.</p>
           </div>
         </div>
       </div>
     </div>
     <div id="accordion-item">
-      <button class="button" data-target="content2" >Toggle Content 2</button>
-      <div id="content2" class="content">
+      <button class="accordion-header" data-target="accordion-body-2" >Toggle Content 2</button>
+      <div id="accordion-body-2" class="accordion-body">
         <p>This is a content.</p>
       </div>
     </div>
@@ -62,21 +62,21 @@
     };
 
     const handleClick = (event) => {
-      const button = event.target.closest(".button");
+      const accordionHeader = event.target.closest(".accordion-header");
 
-      if (!button) return;
+      if (!accordionHeader) return;
 
-      const atr = button.getAttribute("data-target");
-      const element = document.getElementById(atr);
+      const headerAttribute = accordionHeader.getAttribute("data-target");
+      const accordionBody = document.getElementById(headerAttribute);
 
-      if (!element) return;
+      if (!accordionBody) return;
 
-      const isOpen = element.classList.contains("open");
+      const isOpen = accordionBody.classList.contains("open");
 
-      const parentAtr = button.getAttribute("data-parent");
-      const parentElement = document.getElementById(parentAtr);
+      const parentAttribute = accordionHeader.getAttribute("data-parent");
+      const parentElement = document.getElementById(parentAttribute);
 
-      const activeElements = parentElement && parentElement.querySelectorAll('.content.open');
+      const activeElements = parentElement && parentElement.querySelectorAll('.accordion-body.open');
 
       parentElement && activeElements.forEach((el) => collapse(el, false));
 
